--- a/src/index.css
+++ b/src/index.css
@@ -10,16 +10,24 @@
     align-items: center;
     height: 100vh;
     background-color: #000;
+    /* background-image: url("/star.png"); */
+    
+    /* background-repeat: repeat; */
+    /* background-size: 2px; */
+    /* background-repeat: space; */
+    
 }
 
 .sun {
     width: 100px;
     height: 100px;
-    background-color: #fdd835;
     border-radius: 50%;
     box-shadow: 0 0 50px #fdd835;
-    animation: rotate-sun 8s linear infinite;
+    animation: rotate-sun 10s linear infinite;
     position: relative;
+    background-image: url("/public/sun.png");
+    background-position: center;
+    background-size: 150px;
 }
 
 .earth {
@@ -27,11 +35,14 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #2196f3;
     top: 50%;
     left: 50%;
     transform-origin: top left;
-    animation: rotate-earth 12s linear infinite;
+    animation: rotate-earth 20s linear infinite;
+    background-image: url("/public/earth.png");
+    background-position: center;
+    background-size: contain;
+   
 }
 
 .earth::before {
@@ -47,16 +58,20 @@
     transform-origin: 0 0;
     transform: translate(-50%, -50%);
 }
+
 .moon {
     position: absolute;
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #bdbdbd;
+    /* background-color: #bdbdbd; */
     top: 50%;
     left: 50%;
     transform-origin: top left;
     animation: rotate-moon 6s linear infinite;
+    background-image: url("/public/moon.png");
+    background-position: center;
+    background-size: contain;
 }
 
 
@@ -78,7 +93,7 @@
     }
 
     100% {
-        transform: rotate(360deg);
+        transform: rotate(-360deg);
     }
 }
 
