--- a/src/index.css
+++ b/src/index.css
@@ -45,19 +45,19 @@
    
 }
 
-.earth::before {
+/* .earth::before {
     content: "";
     position: absolute;
     top: 50%;
     left: 50%;
     width: 100px;
     height: 100px;
-    border: 1px dashed rgba(255, 255, 255, 0.5);
+    border: 1px dashed rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     box-sizing: border-box;
     transform-origin: 0 0;
     transform: translate(-50%, -50%);
-}
+} */
 
 .moon {
     position: absolute;
